# schedloo-bot

./: .gitignore  pyproject.toml  scripts.py
telegram_calendar/: main.py
telegram_calendar/entities/: calendar_entities.py
telegram_calendar/responses/: error_handler.py  inline_query.py  middleware.py
telegram_calendar/responses/callbacks/: callback_query.py  callbacks.py
telegram_calendar/responses/commands/: more.py  start.py
telegram_calendar/responses/normal_messages/: create_qianz_template.py  new_event.py
telegram_calendar/services/: create_event.py  telegram_bot_data.py
